--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#">LOGO</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -25,114 +25,44 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown
+                                Remeras
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="#">Colección actual</a></li>
+                                <li><a class="dropdown-item" href="#">Colección pasada</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="#">Proximamente</a></li>
                             </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled">Disabled</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        <button class="btn btn-outline-success" type="submit">Buscar</button>
                     </form>
                 </div>
             </div>
         </nav>
     </header>
 
-    <div id="main">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <a href="">
-                        <img src="" alt="">
-                    </a>
-                </div>
-                <div class="col">
-                    <a href="">
-                        <img src="" alt="">
-                    </a>
-                </div>
-                <div class="col">
-                    <a href="">
-                        <img src="" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
+    <div class="container">
+        <h1 id="tituloPrincipal" class="text-center my-3">Dedag</h1>
     </div>
 
-    <div class="carousel-container">
-        <div class="slick-inicialized slick-slider">
-            <div role="presentation" class="slick-list">
-                <div class="slick-track" style="opacity: 1; transform: translate3d(0px, 0px, 0px); width: 8400px;">
-                    <div>
-                        <a href="">
-                            <img src="" alt="">
-                            <div><h1></h1></div>
-                        </a>
-                    </div>
-                    <div>
-                        <a href="">
-                            <img src="" alt="">
-                            <div><h1></h1></div>
-                        </a>
-                    </div>
-                    <div>
-                        <a href="">
-                            <img src="" alt="">
-                            <div><h1></h1></div>
-                        </a>
-                    </div>
-                    <div>
-                        <a href="">
-                            <img src="" alt="">
-                            <div><h1></h1></div>
-                        </a>
-                    </div>
-                    <div>
-                        <a href="">
-                            <img src="" alt="">
-                            <div><h1></h1></div>
-                        </a>
-                    </div>
-                    <div>
-                        <a href="">
-                            <img src="" alt="">
-                            <div><h1></h1></div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div id="main" class="container">
+        <div id="remeras" class="row"></div>
     </div>
-
-
-
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
