--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/bb2d35192e.js" crossorigin="anonymous"></script>
     <title>Dedag</title>
 </head>
 
@@ -32,7 +33,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                Remeras
+                                Colecciones
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#">Colección actual</a></li>
@@ -47,9 +48,12 @@
                     <div class="buscadorMain">
                         <form class="d-flex"  role="search">
                             <input class="form-control me-2" type="search" placeholder="buscar" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Buscar</button>
+                            <button class="btn btn-outline-success me-4" type="submit">Buscar</button>
                         </form>  
                     </div>
+                </div>
+                <div>
+                    <button id="botonCarrito" class="btn btn-ligth"><i class="fa-solid fa-bag-shopping"></i></button>
                 </div>
             </div>
         </nav>
